Fix login page
log in page was not centered

--- a/cookchum/src/App.css
+++ b/cookchum/src/App.css
@@ -4,9 +4,7 @@
   font-family: Arial, sans-serif;
 }
 
-.content {
-  display: flex;
-}
+
 
 .main-content {
   flex: 1;
