--- a/cookchum/src/components/Login.css
+++ b/cookchum/src/components/Login.css
@@ -23,6 +23,7 @@ body {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     border-radius: 8px;
+    
   }
   
   .login-form input {
@@ -122,3 +123,12 @@ body {
     font-size: 12px;
     margin-top: 20px;
   }
+
+  .back-button {
+    background: none;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    color: blue;
+    cursor: pointer;
+}
